# TranscriptMCP

./: LICENSE  README.md  pyproject.toml
transcript_mcp/: __init__.py  server.py
